2003-12-29  Bruno Haible  <bruno@clisp.org>

	* hello-perl/INSTALL: Mention that libintl-perl-1.09 required.
	* hello-perl/hello-1.pl.in, hello-perl/hello-2.pl.in: Inhibit the
	automatic UTF-8 conversion in UTF-8 locales with Perl-5.8.0. Thanks to
	Guido Flohr.

2003-12-26  Bruno Haible  <bruno@clisp.org>

	* hello-csharp: New subdirectory.
	* hello-csharp-forms: New subdirectory.
	* Makefile.am (EXAMPLESFILES): Add the files in hello-csharp and
	hello-csharp-forms.

2003-12-26  Bruno Haible  <bruno@clisp.org>

	* hello-c++-qt/m4/qt.m4: Quote the first argument of AC_DEFUN.
	* hello-c++-gnome/m4/gtk.m4, hello-c++-gnome/m4/gtk--.m4: Likewise.

2003-12-17  Bruno Haible  <bruno@clisp.org>

	* gettext-0.13.1 released.

2003-12-17  Bruno Haible  <bruno@clisp.org>

	* hello-*/po/LINGUAS: Update.
	* Makefile.am (EXAMPLESFILES): Add the new message catalogs.

2003-12-09  Bruno Haible  <bruno@clisp.org>

	* hello-smalltalk/hello.st.in: Add workaround against PackageLoader
	verbosity. Solution provided by Carey Evans <careye@spamcop.net>.
	* hello-smalltalk/BUGS: Remove file.
	* Makefile.am (EXAMPLESFILES): Update.

2003-12-07  Bruno Haible  <bruno@clisp.org>

	* po/sv.po: New file, from Jan Djärv <jan.h.d@swipnet.se>.
	* po/tr.po: New file, from
	Nilgün Belma Bugüner <nilgun@superonline.com>.
	* po/LINGUAS: Add sv, tr.

2003-12-07  Bruno Haible  <bruno@clisp.org>

	* hello-perl/hello-1.pl.in: Renamed from hello-perl/hello.pl. Make it
	work.
	* hello-perl/hello-2.pl.in: New file, from Guido Flohr.
	* hello-perl/po/Makefile.am (POTFILES): Update.
	(XGETTEXT_OPTIONS): Add options needed for the Locale::TextDomain API.
	* hello-perl/configure.ac: Update accordingly.
	* hello-perl/Makefile.am: Update accordingly.
	* Makefile.am (EXAMPLESFILES): Update.
	* po/Makefile.am (POTFILES): Update.

2003-12-06  Bruno Haible  <bruno@clisp.org>

	* hello-objc-gnustep/po/LocaleAliases: Add many new locales. Fix typo
	for EcuadorSpanish. Remove conflicting entries for Indonesian and
	Hebrew.