@@ -1,3 +1,7 @@
+2004-01-10  Bruno Haible  <bruno@clisp.org>
+
+	* lang-csharp: Work around mono-0.29 CurrentUICulture bug.
+
 2003-12-29  Bruno Haible  <bruno@clisp.org>
 
 	* testlocale.c: Include stdlib.h.
